# time_profiler_visualizer

./: .gitattributes  README.md
app/: CMakeLists.txt  elapsed_time_visualizer.cpp
app/elapsed_time_visualizer_files/: line_chart.min.js  lines.html  lines.min.css  lines_setup.min.js
app/resources/: CMakeLists.txt  wxElapsedTimeVisualizerApp.desktop
include/time_profiler/: time_profiler.h
